--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,6 @@ requests
 
 # LLMs and API integrations
 langchain-groq
-tavily-python
 arxiv
 
 # Data processing
@@ -36,3 +35,4 @@ duckduckgo-search
 requests
 httpx
 tqdm
+rank-bm25
